# qcv-prototyper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
res/prg/: example.prg
src/: datas.h  get_stage.cpp  get_stage.h  init_values.cpp  init_values.h  main.cpp  program.cpp  program.h  program_parser.cpp  program_parser.h  stage_base.cpp  stage_base.h  stage_data.cpp  stage_data.h  window.cpp  window.h
src/stage/basic/: binarization_stage.cpp  binarization_stage.h  dilate_stage.cpp  dilate_stage.h  edge_binarization_stage.cpp  edge_binarization_stage.h  erode_stage.cpp  erode_stage.h  grayscale_stage.cpp  grayscale_stage.h  morph_stage.cpp  morph_stage.h
src/stage/blur/: basic_blur_stage.cpp  basic_blur_stage.h  bilateral_filter_stage.cpp  bilateral_filter_stage.h  gaussian_blur_stage.cpp  gaussian_blur_stage.h  median_blur_stage.cpp  median_blur_stage.h
src/stage/edge_detection/: canny_edge_stage.cpp  canny_edge_stage.h  contour_stage.cpp  contour_stage.h  convex_hull_stage.cpp  convex_hull_stage.h  harris_corner_stage.cpp  harris_corner_stage.h  hough_lines_stage.cpp  hough_lines_stage.h  sobel_edge_stage.cpp  sobel_edge_stage.h
src/stage/rectangle_processing/: extract_rectangle_stage.cpp  extract_rectangle_stage.h  rectangle_size_filter_stage.cpp  rectangle_size_filter_stage.h  rectangle_sorter_stage.cpp  rectangle_sorter_stage.h  rectangle_stage.cpp  rectangle_stage.h  remove_inner_box_stage.cpp  remove_inner_box_stage.h  reorientation_stage.cpp  reorientation_stage.h  rotated_rectangle_stage.cpp  rotated_rectangle_stage.h
(+10 files in other folders)
